Rewrote Python resume.

--- a/python-resume.org
+++ b/python-resume.org
@@ -1,9 +1,9 @@
-# -*- fill-column: 80; org-confirm-babel-evaluate: nil -*-
+# -*- fill-column: 80 -*-
 
 #+TITLE:     Resume
 #+AUTHOR:    Oleg Sivokon
 #+EMAIL:     olegsivokon@gmail.com
-#+DATE:      <2015-05-19 Tue>
+#+DATE:      <2015-08-02 Sun>
 #+DESCRIPTION: My resume
 #+KEYWORDS: Resume, job, employment, cv
 #+OPTIONS: toc:nil
@@ -26,93 +26,138 @@
 \clearpage
 #+END_LATEX
 
-* Foreword
-  After sending my complete resume couple dozens times I've came to conclusion
-  that if I mention all programming-related experience I had so far, this
-  confuses human resources employees, therefore this version of my resume
-  will focus on my experience related to Python and will deliberately leave
-  out the rest.
+* Technology Summary
+** Languages
+   + ActionScript :: considerably above average.
+   + C :: basic familiarity.
+   + Clojure :: average.
+   + Common Lisp :: solid average.
+   + Emacs Lisp :: above average.
+   + Erlang :: somewhat above basics.
+   + Forth :: basic familiarity.
+   + Haskell :: somewhat above basics.
+   + Haxe :: solid average.
+   + Java :: somewhat above basics.
+   + JavaScript :: considerably above average.
+   + Mercury :: somewhat above basics.
+   + OCaml :: somewhat above basics.
+   + PHP :: somewhat above basics.
+   + Prolog :: somewhat above basics.
+   + Python :: average.
+   + Ruby :: basic familiarity.
+   + Scala :: basic familiarity.
+   + Scheme :: somewhat above basics.
+   + Shell :: average.
 
-  I will, however, put a loundry list of technologies I worked with here in
-  order to optimize the search.
+   + /Note that the bar is at different heights in different languages./
+     /Thus, for example, I know more about Common Lisp, than I know about/
+     /JavaScript, but Common Lisp is a bigger language, which attracts/
+     /more skilled professionals than JavaScript does./
+   + /My estimates may be too shy due to me comparing myself to the/
+     /data available online, however, my experience is that programmers/
+     /with less than average knowledge of their trade are underrepresented/
+     /in such data./
+   + /Hopefully, the breadth of my knowledge can compensate for the lack/
+     /of experience in any particular technology to a certain degree./
 
-  + GNU/Linux :: is the operating system I use at work and at home.  Most of
-       the time it's RHEL-like distros, but I'm also familiar with Debian-style
-       infrastructure.  I know enough to perform a system administrator function,
-       however I'm not actively seeking that role.
-  + Web stack :: which includes HTML, JavaScript and CSS.  I've used all of
-       these on more than one occasion.  In fact, my programming career began
-       with another ECMAScript dialect - ActionScript.  I'm familiar with
-       many JavaScript implementations, including NodeJS, Rhino and even
-       Qt Script.  I'm familiar with NodeJS because it is used with tools
-       like =jslint=, =tern= and =Grunt= for JavaScript development tasks.
-       I'm familiar with Rhino because it is used in testing in Selenium
-       and because it is available in Ant scripts, while it doesn't require
-       additional libraries, which makes it a choice of embedded programming
-       language in it.  I was considering Qt Script for one of my pet projects,
-       which, unfortunately, never left the ground.
-       If I need to throw in some names, then, of course, I used JQuery, 
-       I also used Backbone before everyone was so excited about Angluar,
-       I also used Prototype before everyone was so excited about Backbone.
-       Of course I know and used Underscore, various JQuery plugins, Mootools,
-       and a lot of other species from the JavaScrip zoo.
-       Eventually, I also touched PHP, JSP and even ASP (classic!) both the
-       Basic and the JScript varieties, but washing the smell off my hands
-       was no easy taks.
+** Mathematics And Statistics
+   + J :: basic familiarity.
+   + Julia :: basic familiarity.
+   + Maxima :: basic familiarity.
+   + Octave (Matlab) :: basic familiarity.
+   + R (S) :: somewhat above basics.
+
+** Related Technologies
+   + Data representation formats (XML, YAML, JSON, RDF, AMF) :: above
+        average.
+   + Graph databases :: significantly above basics.
+   + Network protocols (TCP, UDP, HTTP, FTP) :: top of the stack -
+        solid average. I have basic knowledge of the protocols below
+        transport level.
+   + Relational databases (SQL) :: somewhat above basics.
+   + Web stack (HTML, CSS) :: average.
+
+** Environments
+   + Eclipse :: solid average.
+   + Emacs :: considerably above average.
+   + Intellij IDEA :: average.
+   + Vim :: basic familiarity.
+   + Visual Studio :: average.
+
+** Operating Systems
+   + Android :: basic familiarity.
+   + GNU/Linux :: solid average.
+   + Mac OS :: somewhat above basics.
+   + Microsoft Windows :: average.
+
+** Infrastructure
+   + Build and automation tools :: Ant, Maven, Gradle, Make, Grunt, Jenkins.
+   + Project management :: JIRA, Redmine, Track, Mediawiki, Bugzilla.
+   + Testing frameworks :: Selenium, Flex Unit, JUnit,
+        unittest (Python), 5am, Cucumber.
+   + Version control systems :: Git (above average), Subversion (average),
+        Mercurial (basic familiarity), Perforce (basic familiarity),
+        Bazaar (basic familiarity).
+
+** Theory
+   + (Finite) Model theory :: basic understanding.
+   + Complexity theory :: basic understanding.
+   + Computability theory :: basic understanding.
+   + Distributed computation (join-calculus, $\pi$-calculus) :: basic
+        understanding.
+   + Objects (description logic, $\zeta$-calculus) :: solid
+        understanding.
+   + Program semantics :: average understanding.
+   + Type theory (typed $\lambda$-calculus, intuitionistic logic) :: average
+        understanding.
+
+   + /These estimates relate to theoretical computer science researchers/
+     /rather than average programmers.  I would score higher/
+     /in my own valuation, if I compared myself to average programmer./
 
 * Work History
   
 ** PowToon Ltd.
-   + *Position:* /Programmer/
-   + *Term:* /January 2014--May 2015/
-
-   When the company hired me, they didn't have any automated builds and no tests
-   for their product.  Even though it wasn't my direct responsibility, I
-   volunteered to write build scripts, which included using Fabric, Ant and
-   Gradle.  I also volunteered to set up Jenkins continuous integration server
-   which I later managed until I quit.
-
-   I also tried to organize testing, however, I had only achieved partial success
-   here.  I wrote a minimal HTTP server based on =SimpleHTTPServer= with HTML
-   interface for developers, and (later) testers, where they could submit bug
-   reports, which would be automatically converted into test cases.  Regardless
-   of the system being very simple, other programmers avoided using it.
-
-   During my time at Powtoon I also conducted several experiments in statistical
-   analysis (albeit very simplistic) of the data collected by the company.
-   In particular, using =NumPy= and =SciPy= packages I wrote a simple /k-means/
-   algorithm which would try to cluster the textual data extracted from the
-   presentations prepared by the users based on the presentation's subject.
-
-   Powtoon's server-side code is written using Django framework, obviously,
-   I had to use it too.
+   + Position :: /Programmer/
+   + Term :: /January 2014--May 2015/
+   + *Accomplishments*
+     - I completely rewrote the major part of the application responsible
+       for generating presentation content from description, making it
+       more efficient in terms of network utilization, making it available
+       to more platforms and improving the overall coding standards.
+     - I invested heavily into project infrastructure by developing automated
+       builds for a number of sub-projects, setting up and maintaining Jenkins
+       continuous integration server.  Reorganizing interaction with version
+       control system and creating a number of automated tests in cooperation
+       with quality assurance department.
+     - I wrote several in-depth proposals for general improvements in the
+       program I worked on, some of which were later implemented and resulted
+       in improved program performance and customers' experience.
    
 ** TransGaming Inc.
-   + *Position:* /Programmer/
-   + *Term:* /April 2013--2013 (less than a year)/
+   + Position :: /Programmer/
+   + Term :: /April 2013--2013 (less than a year)/
+   + *Accomplishments*
+     - I wrote a game portal for ``Smart TV'' deployment.
+     - I wrote a tester program, which stress-tested the program performance
+       on ``Smart TV''.
+     - I wrote automated build for my project.
+     - I wrote a sizable chunk of code dealing with usage statistic aggregation
+       using Google Analytics.
 
-   A very cumbersome part of my job here was the testing.  The company
-   specializes in games for the so-called ``smart-TV''.  This implies working
-   with proprietary products which make it difficult to test integration due to
-   restrictions wrt viewing the source code and communication protocols.
-
-   In order to automate the testing, I used Selenium server, which I extended
-   with my code intended to automate deployment into television set or an
-   emulator.  My job, however, had an interesting side to it too: since my
-   primary objective was to write a game, in order to test the game, I wrote
-   several game bots, with different skill level.
-   
 ** Rounds
-   + *Position:* /Programmer/
-   + *Term:* /December 2010 – August 2011 (9 months)/
-
-   Before the company hired me, the company never conducted any systematic
-   testing of their product.  Even though testing was not on the list of my
-   direct responsibilities, I volunteered to write a minimal testing server
-   which would replicate the API of the company's main server and I wrote a chat
-   client (the company's product is a video chat), which would enact prepared
-   scenarios in order to search for misalignment in the chat protocol
-   interpretation on the client and server sides.
+   + Position :: /Programmer/
+   + Term :: /December 2010 – August 2011 (9 months)/
+   + *Accomplishments*
+     - I rewrote the communication part of the video chat application paying
+       great attention to stability, fault tolerance and error reporting
+       which allowed for better control of application performance and better
+       customer experience.
+     - In order to accomplish the above, I introduced testing methodologies to
+       the company, I also wrote a testing server, which mocked the application
+       life cycle and usage patterns.
+     - I also wrote a small natural language processing program which was used
+       to advertise the company's product.
    
 * Courses
   I took several online courses from Coursera, Udacity and edX, which required
@@ -125,13 +170,22 @@
   I also volunteered for SCons project, writing an ActionScript plugin for it.
   (SCons is an extensible build system written in Python).
 
-  Two years ago I interviewed for a position of Python programmer at Walla.
-  They requested that I write a small test project, which I did.  The project,
-  although somewhat outdated, is still available for viewing:
+  Two years ago I interviewed for a position of Python programmer at Walla.  The
+  company requested that I write a small test project, which I did.  The
+  project, although somewhat outdated, is still available for viewing:
   https://github.com/wvxvw/intj.
 
+  At the moment, I'm working on two of my pet projects: an intelligent IRC bot,
+  capable of searching the chat history and answering questions about it.  This
+  project uses SQLAlchemy to connect to Postgres SQL database as well as Sphinx
+  full text indexing and search engine in order to accomplish its goals.
+
+  My other pet project is an intelligent indexing and search for Emacs.  It uses
+  Common Lisp to interface with indexing databases (Sphinx at the moment, and
+  potentially Lucene and Swish-e).
+
   I am currently studying in Open University of Israel, mathematics faculty,
-  about to finish my first year.
+  about to finish my second year.
 
 * Hobbies
   - NLP
