--- a/python-resume.tex
+++ b/python-resume.tex
@@ -1,4 +1,4 @@
-% Created 2015-05-21 Thu 13:17
+% Created 2015-08-02 Sun 15:19
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -21,7 +21,7 @@
 \usepackage[scaled]{helvet}
 \renewcommand*\familydefault{\sfdefault}
 \author{Oleg Sivokon}
-\date{\textit{<2015-05-19 Tue>}}
+\date{\textit{<2015-08-02 Sun>}}
 \title{Resume}
 \hypersetup{
  pdfauthor={Oleg Sivokon},
@@ -52,109 +52,179 @@ Address: & Florentin 50, Tel Aviv, Israel\\
 
 \clearpage
 
-\section{Foreword}
+\section{Technology Summary}
+\label{sec:orgheadline9}
+\subsection{Languages}
 \label{sec:orgheadline2}
-After sending my complete resume couple dozens times I've came to conclusion
-that if I mention all programming-related experience I had so far, this
-confuses human resources employees, therefore this version of my resume
-will focus on my experience related to Python and will deliberately leave
-out the rest.
-
-I will, however, put a loundry list of technologies I worked with here in
-order to optimize the search.
-
 \begin{description}
-\item[{GNU/Linux}] is the operating system I use at work and at home.  Most of
-the time it's RHEL-like distros, but I'm also familiar with Debian-style
-infrastructure.  I know enough to perform a system administrator function,
-however I'm not actively seeking that role.
-\item[{Web stack}] which includes HTML, JavaScript and CSS.  I've used all of
-these on more than one occasion.  In fact, my programming career began
-with another ECMAScript dialect - ActionScript.  I'm familiar with
-many JavaScript implementations, including NodeJS, Rhino and even
-Qt Script.  I'm familiar with NodeJS because it is used with tools
-like \texttt{jslint}, \texttt{tern} and \texttt{Grunt} for JavaScript development tasks.
-I'm familiar with Rhino because it is used in testing in Selenium
-and because it is available in Ant scripts, while it doesn't require
-additional libraries, which makes it a choice of embedded programming
-language in it.  I was considering Qt Script for one of my pet projects,
-which, unfortunately, never left the ground.
-If I need to throw in some names, then, of course, I used JQuery, 
-I also used Backbone before everyone was so excited about Angluar,
-I also used Prototype before everyone was so excited about Backbone.
-Of course I know and used Underscore, various JQuery plugins, Mootools,
-and a lot of other species from the JavaScrip zoo.
-Eventually, I also touched PHP, JSP and even ASP (classic!) both the
-Basic and the JScript varieties, but washing the smell off my hands
-was no easy taks.
+\item[{ActionScript}] considerably above average.
+\item[{C}] basic familiarity.
+\item[{Clojure}] average.
+\item[{Common Lisp}] solid average.
+\item[{Emacs Lisp}] above average.
+\item[{Erlang}] somewhat above basics.
+\item[{Forth}] basic familiarity.
+\item[{Haskell}] somewhat above basics.
+\item[{Haxe}] solid average.
+\item[{Java}] somewhat above basics.
+\item[{JavaScript}] considerably above average.
+\item[{Mercury}] somewhat above basics.
+\item[{OCaml}] somewhat above basics.
+\item[{PHP}] somewhat above basics.
+\item[{Prolog}] somewhat above basics.
+\item[{Python}] average.
+\item[{Ruby}] basic familiarity.
+\item[{Scala}] basic familiarity.
+\item[{Scheme}] somewhat above basics.
+\item[{Shell}] average.
+
+\item \emph{Note that the bar is at different heights in different languages.}
+     \emph{Thus, for example, I know more about Common Lisp, than I know about}
+     \emph{JavaScript, but Common Lisp is a bigger language, which attracts}
+     \emph{more skilled professionals than JavaScript does.}
+\item \emph{My estimates may be too shy due to me comparing myself to the}
+     \emph{data available online, however, my experience is that programmers}
+     \emph{with less than average knowledge of their trade are underrepresented}
+     \emph{in such data.}
+\item \emph{Hopefully, the breadth of my knowledge can compensate for the lack}
+     \emph{of experience in any particular technology to a certain degree.}
+\end{description}
+
+\subsection{Mathematics And Statistics}
+\label{sec:orgheadline3}
+\begin{description}
+\item[{J}] basic familiarity.
+\item[{Julia}] basic familiarity.
+\item[{Maxima}] basic familiarity.
+\item[{Octave (Matlab)}] basic familiarity.
+\item[{R (S)}] somewhat above basics.
+\end{description}
+
+\subsection{Related Technologies}
+\label{sec:orgheadline4}
+\begin{description}
+\item[{Data representation formats (XML, YAML, JSON, RDF, AMF)}] above
+average.
+\item[{Graph databases}] significantly above basics.
+\item[{Network protocols (TCP, UDP, HTTP, FTP)}] top of the stack -
+solid average. I have basic knowledge of the protocols below
+transport level.
+\item[{Relational databases (SQL)}] somewhat above basics.
+\item[{Web stack (HTML, CSS)}] average.
+\end{description}
+
+\subsection{Environments}
+\label{sec:orgheadline5}
+\begin{description}
+\item[{Eclipse}] solid average.
+\item[{Emacs}] considerably above average.
+\item[{Intellij IDEA}] average.
+\item[{Vim}] basic familiarity.
+\item[{Visual Studio}] average.
+\end{description}
+
+\subsection{Operating Systems}
+\label{sec:orgheadline6}
+\begin{description}
+\item[{Android}] basic familiarity.
+\item[{GNU/Linux}] solid average.
+\item[{Mac OS}] somewhat above basics.
+\item[{Microsoft Windows}] average.
+\end{description}
+
+\subsection{Infrastructure}
+\label{sec:orgheadline7}
+\begin{description}
+\item[{Build and automation tools}] Ant, Maven, Gradle, Make, Grunt, Jenkins.
+\item[{Project management}] JIRA, Redmine, Track, Mediawiki, Bugzilla.
+\item[{Testing frameworks}] Selenium, Flex Unit, JUnit,
+unittest (Python), 5am, Cucumber.
+\item[{Version control systems}] Git (above average), Subversion (average),
+Mercurial (basic familiarity), Perforce (basic familiarity),
+Bazaar (basic familiarity).
+\end{description}
+
+\subsection{Theory}
+\label{sec:orgheadline8}
+\begin{description}
+\item[{(Finite) Model theory}] basic understanding.
+\item[{Complexity theory}] basic understanding.
+\item[{Computability theory}] basic understanding.
+\item[{Distributed computation (join-calculus, \(\pi\)-calculus)}] basic
+understanding.
+\item[{Objects (description logic, \(\zeta\)-calculus)}] solid
+understanding.
+\item[{Program semantics}] average understanding.
+\item[{Type theory (typed \(\lambda\)-calculus, intuitionistic logic)}] average
+understanding.
+
+\item \emph{These estimates relate to theoretical computer science researchers}
+     \emph{rather than average programmers.  I would score higher}
+     \emph{in my own valuation, if I compared myself to average programmer.}
 \end{description}
 
 \section{Work History}
-\label{sec:orgheadline6}
+\label{sec:orgheadline13}
 
 \subsection{PowToon Ltd.}
-\label{sec:orgheadline3}
+\label{sec:orgheadline10}
+\begin{description}
+\item[{Position}] \emph{Programmer}
+\item[{Term}] \emph{January 2014--May 2015}
+\item \textbf{Accomplishments}
 \begin{itemize}
-\item \textbf{Position:} \emph{Programmer}
-\item \textbf{Term:} \emph{January 2014 – May 2015}
+\item I completely rewrote the major part of the application responsible
+for generating presentation content from description, making it
+more efficient in terms of network utilization, making it available
+to more platforms and improving the overall coding standards.
+\item I invested heavily into project infrastructure by developing automated
+builds for a number of sub-projects, setting up and maintaining Jenkins
+continuous integration server.  Reorganizing interaction with version
+control system and creating a number of automated tests in cooperation
+with quality assurance department.
+\item I wrote several in-depth proposals for general improvements in the
+program I worked on, some of which were later implemented and resulted
+in improved program performance and customers' experience.
 \end{itemize}
-
-When the company hired me, they didn't have any automated builds and no tests
-for their product.  Even though it wasn't my direct responsibility, I
-volunteered to write build scripts, which included using Fabric, Ant and
-Gradle.  I also volunteered to set up Jenkins continuous integration server
-which I later managed until I quit.
-
-I also tried to organize testing, however, I had only achieved partial success
-here.  I wrote a minimal HTTP server based on \texttt{SimpleHTTPServer} with HTML
-interface for developers, and (later) testers, where they could submit bug
-reports, which would be automatically converted into test cases.  Regardless
-of the system being very simple, other programmers avoided using it.
-
-During my time at Powtoon I also conducted several experiments in statistical
-analysis (albeit very simplistic) of the data collected by the company.
-In particular, using \texttt{NumPy} and \texttt{SciPy} packages I wrote a simple \emph{k-means}
-algorithm which would try to cluster the textual data extracted from the
-presentations prepared by the users based on the presentation's subject.
-
-Powtoon's server-side code is written using Django framework, obviously,
-I had to use it too.
+\end{description}
 
 \subsection{TransGaming Inc.}
-\label{sec:orgheadline4}
+\label{sec:orgheadline11}
+\begin{description}
+\item[{Position}] \emph{Programmer}
+\item[{Term}] \emph{April 2013--2013 (less than a year)}
+\item \textbf{Accomplishments}
 \begin{itemize}
-\item \textbf{Position:} \emph{Programmer}
-\item \textbf{Term:} \emph{April 2013 – 2013 (less than a year)}
+\item I wrote a game portal for ``Smart TV'' deployment.
+\item I wrote a tester program, which stress-tested the program performance
+on ``Smart TV''.
+\item I wrote automated build for my project.
+\item I wrote a sizable chunk of code dealing with usage statistic aggregation
+using Google Analytics.
 \end{itemize}
-
-A very cumbersome part of my job here was the testing.  The company
-specializes in games for the so-called ``smart-TV''.  This implies working
-with proprietary products which make it difficult to test integration due to
-restrictions wrt viewing the source code and communication protocols.
-
-In order to automate the testing, I used Selenium server, which I extended
-with my code intended to automate deployment into television set or an
-emulator.  My job, however, had an interesting side to it too: since my
-primary objective was to write a game, in order to test the game, I wrote
-several game bots, with different skill level.
+\end{description}
 
 \subsection{Rounds}
-\label{sec:orgheadline5}
+\label{sec:orgheadline12}
+\begin{description}
+\item[{Position}] \emph{Programmer}
+\item[{Term}] \emph{December 2010 – August 2011 (9 months)}
+\item \textbf{Accomplishments}
 \begin{itemize}
-\item \textbf{Position:} \emph{Programmer}
-\item \textbf{Term:} \emph{December 2010 – August 2011 (9 months)}
+\item I rewrote the communication part of the video chat application paying
+great attention to stability, fault tolerance and error reporting
+which allowed for better control of application performance and better
+customer experience.
+\item In order to accomplish the above, I introduced testing methodologies to
+the company, I also wrote a testing server, which mocked the application
+life cycle and usage patterns.
+\item I also wrote a small natural language processing program which was used
+to advertise the company's product.
 \end{itemize}
-
-Before the company hired me, the company never conducted any systematic
-testing of their product.  Even though testing was not on the list of my
-direct responsibilities, I volunteered to write a minimal testing server
-which would replicate the API of the company's main server and I wrote a chat
-client (the company's product is a video chat), which would enact prepared
-scenarios in order to search for misalignment in the chat protocol
-interpretation on the client and server sides.
+\end{description}
 
 \section{Courses}
-\label{sec:orgheadline7}
+\label{sec:orgheadline14}
 I took several online courses from Coursera, Udacity and edX, which required
 me to complete programming assignments in Python.
 
@@ -165,16 +235,25 @@ learning at Udacity, introduction to algorithms (two courses) at Coursera.
 I also volunteered for SCons project, writing an ActionScript plugin for it.
 (SCons is an extensible build system written in Python).
 
-Two years ago I interviewed for a position of Python programmer at Walla.
-They requested that I write a small test project, which I did.  The project,
-although somewhat outdated, is still available for viewing:
+Two years ago I interviewed for a position of Python programmer at Walla.  The
+company requested that I write a small test project, which I did.  The
+project, although somewhat outdated, is still available for viewing:
 \url{https://github.com/wvxvw/intj}.
 
+At the moment, I'm working on two of my pet projects: an intelligent IRC bot,
+capable of searching the chat history and answering questions about it.  This
+project uses SQLAlchemy to connect to Postgres SQL database as well as Sphinx
+full text indexing and search engine in order to accomplish its goals.
+
+My other pet project is an intelligent indexing and search for Emacs.  It uses
+Common Lisp to interface with indexing databases (Sphinx at the moment, and
+potentially Lucene and Swish-e).
+
 I am currently studying in Open University of Israel, mathematics faculty,
-about to finish my first year.
+about to finish my second year.
 
 \section{Hobbies}
-\label{sec:orgheadline8}
+\label{sec:orgheadline15}
 \begin{itemize}
 \item NLP
 \item Computational linguistics
